Generate recursive XML elements within ops
Elements called “children” and “attrs” will not work..

--- a/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
+++ b/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
@@ -219,6 +219,9 @@ blocks:
             name: "{item_name}",
             payment: "{payment_options}",
             shipping: "{shipping_options}",
+            description: {
+              text: "{{MobyDick()}}"
+            }
           }
         ratio: 4
         op: >2
@@ -233,7 +236,7 @@ blocks:
             from: "{{FullNames()}}",
             to: "{{Add(-1); FullNames()}}",
             date: "{email_date}",
-            text: "{{Shakespeare()}}"
+            text: "{{WarAndPeace()}}"
           }
         ratio: 4
         op: >2
