xml driver - expanded list
when a value is a list, each item in the list generates a separate element in the XML.

--- a/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
+++ b/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
@@ -221,6 +221,10 @@ blocks:
             shipping: "{shipping_options}",
             description: {
               text: "{{MobyDick()}}"
+            },
+            expandedlist: "{{ListSizedHashed(FixedValue(5),CitiesByPopulation())}}",
+            list: {
+              listitem: "{{}}"
             }
           }
         ratio: 4
